SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/UserRoleAccess__c.object
<CustomObject>
    <fields>
        <fullName>Approve_Request_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Request Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <label>UserRoleAccess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Roles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserRoleAccesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>